--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <div class="hero-cta">
+    <h2>Start Building Habits</h2>
+    <p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. In totam veritatis voluptatem a. Odit debitis magni consequatur saepe molestias, iste libero et tempora architecto veniam, ullam quos cumque, temporibus possimus.
+    </p>
+  </div>
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
